# cookiecutter-mahler-registry

./: README.rst  cookiecutter.json
mahler.registry.{{cookiecutter.plugin_name}}/: LICENSE  README.rst  setup.cfg  setup.py
mahler.registry.{{cookiecutter.plugin_name}}/doc/src/: conf.py  index.rst
mahler.registry.{{cookiecutter.plugin_name}}/src/mahler/registry/{{cookiecutter.plugin_name}}/: __init__.py  registrar.py
tests/: test_template.py
