[versioneer]
VCS=git
style=pep440-post
versionfile_source=src/mahler/registry/{{ cookiecutter.plugin_name }}/_version.py
versionfile_build=mahler/registry/{{ cookiecutter.plugin_name }}/_version.py
tag_prefix=
parentdir_prefix=mahler.registry.{{ cookiecutter.plugin_name }}-

[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
license_file=LICENSE
